Removed `portable_target` dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,47 @@
 ################################################################################
-# Copyright (c) 2023 Vladislav Trifochkin
+# Copyright (c) 2023-2024 Vladislav Trifochkin
 #
 # This file is part of `lorem-lib`.
 #
 # Changelog:
-#      2023.04.25 Initial version.
+#       2023.04.25 Initial version.
+#       2024.11.23 Up to C++14 standard.
+#                  Removed `portable_target` dependency.
 ################################################################################
-cmake_minimum_required (VERSION 3.11)
+cmake_minimum_required (VERSION 3.19)
 project(mime-ALL LANGUAGES CXX C)
 
 option(MIME__BUILD_STRICT "Build with strict policies: C++ standard required, C++ extension is OFF etc" ON)
 option(MIME__BUILD_TESTS "Build tests" OFF)
-option(MIME__BUILD_DEMO "Build examples/demo" OFF)
-option(MIME__ENABLE_COVERAGE "Build tests with coverage support" OFF)
-option(MIME__BUILD_SHARED "Enable build shared library" ON)
 
-if (NOT PORTABLE_TARGET__ENABLED)
-    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/2ndparty/portable-target/cmake/v2)
-    include(PortableTarget)
-    portable_target(SET ENABLE_TRACE ON)
+if (MIME__BUILD_STRICT)
+    if (NOT CMAKE_CXX_STANDARD)
+        set(CMAKE_CXX_STANDARD 14)
+    endif()
+
+    set(CXX_STANDARD_REQUIRED ON)
+    set(CMAKE_CXX_EXTENSIONS OFF) # use -std=c++XX rather than -std=gnu++XX
 endif()
 
 message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")
 message(STATUS "C++ compiler version: ${CMAKE_CXX_COMPILER_VERSION}")
 
-if (MIME__BUILD_STRICT)
-    set(CXX_STANDARD_REQUIRED ON)
-    set(CMAKE_CXX_EXTENSIONS OFF) # use -std=c++XX rather than -std=gnu++XX
-endif()
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 
-portable_target(INCLUDE_PROJECT ${CMAKE_CURRENT_LIST_DIR}/library.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/library.cmake)
 
-if (MIME__BUILD_TESTS AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests)
+if (MIME__BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif()
 
-if (MIME__BUILD_DEMO AND EXISTS ${CMAKE_CURRENT_LIST_DIR}/demo)
-    add_subdirectory(demo)
-endif()
+include(GNUInstallDirs)
+
+install(TARGETS mime
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
